<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:background="@color/colorWhite"
    android:clickable="true"
    tools:context=".views.fragments.ProfileFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop = "16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorPrimaryBackground"
        android:elevation="@dimen/toolbar_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="294dp"
            android:background="@drawable/drawable_whitesearchlayout"
            android:layout_height="26dp">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint = "@string/alexsmith"
                style="@style/StyleRegular"
                android:textSize = "14sp"
                android:textColor = "@color/colorGray6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart = "7dp"
                android:background="@android:color/transparent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/guidelineStart"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id = "@+id/guidelineEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_circleimage"
        android:layout_width="71dp"
        android:layout_height="71dp"
        android:src="@drawable/ic_avatar"
        android:background = "@drawable/drawable_color_red_circle_stroke"
        android:layout_marginTop = "15dp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <TextView
        android:id="@+id/txTvname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/alex"
        android:textSize="24sp"
        style="@style/StyleRegular"
        android:textColor = "@color/colorBlack"
        android:layout_marginTop="11dp"
        android:layout_marginStart = "10dp"
        app:layout_constraintTop_toBottomOf="@id/iv_circleimage"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>
    <TextView
        android:id="@+id/txTvidname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/alexrock"
        android:textSize="16sp"
        android:layout_marginStart = "10dp"
        style="@style/StyleRegular"
        android:textColor = "@color/colorGray8"
        app:layout_constraintTop_toBottomOf="@id/txTvname"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>
    <TextView
        android:id="@+id/txTvFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/friends"
        android:textSize="14sp"
        style="@style/StyleRegular"
        android:textColor = "@color/colorMaroon"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:layout_marginTop="14dp"
        android:layout_marginEnd = "16dp"/>
    <TextView
        android:id="@+id/txTvcontries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/totalcontries"
        android:textSize="20dp"
        android:textColor="@color/colorGray5"
        app:layout_constraintTop_toBottomOf="@id/txTvFriends"
        app:layout_constraintStart_toEndOf="@id/iv_circleimage"
        android:layout_marginTop= "16dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:ems = "4"
        android:gravity= "center"/>
    <TextView
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/totalcites"
        android:textColor="@color/colorGray5"
        android:gravity= "center"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@id/txTvcontries"
        app:layout_constraintTop_toBottomOf="@id/txTvFriends"
        android:layout_marginTop= "16dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.05"/>













</androidx.constraintlayout.widget.ConstraintLayout>