<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    tools:context=".views.fragments.ArcdeTriompheFragment">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_Arc_de_triomphe"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="2.1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/sym_def_app_icon" />

            <TextView
                android:id="@+id/txTv_Arc_de_triomphe"
                style="@style/StyleSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arc_de_triomphe"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_Arc_de_triomphe"
                app:layout_constraintStart_toStartOf="@id/iv_Arc_de_triomphe"
                app:layout_constraintTop_toTopOf="@id/iv_Arc_de_triomphe"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/loacation"
                style="@style/StyleRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/location"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/txTv_Arc_de_triomphe"
                app:layout_constraintTop_toBottomOf="@id/txTv_Arc_de_triomphe" />

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like_selected"
                app:layout_constraintBottom_toBottomOf="@id/iv_Arc_de_triomphe"
                app:layout_constraintEnd_toEndOf="@id/iv_Arc_de_triomphe"
                app:layout_constraintTop_toTopOf="@id/iv_Arc_de_triomphe"
                app:layout_constraintVertical_bias="0.95" />

            <ImageView
                android:id="@+id/iv_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="46dp"
                android:src="@drawable/ic_dislike_selected"
                app:layout_constraintBottom_toBottomOf="@id/iv_like"
                app:layout_constraintEnd_toStartOf="@id/iv_like" />
            <TextView
                android:id="@+id/txTv_visited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/drawable_white_rectangle_shape"
                android:elevation="4dp"
                android:text="@string/visited"
                android:textColor="@color/colorMaroon"
                android:drawableStart="@drawable/suitcase"
                android:gravity="center_vertical"
                android:drawablePadding="4dp"
                app:layout_constraintEnd_toEndOf="@id/iv_Arc_de_triomphe"
                app:layout_constraintTop_toBottomOf="@id/iv_Arc_de_triomphe"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/txtv_80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_80"
                android:textColor="@color/colorGray10"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@id/txTv_visited"
                app:layout_constraintStart_toStartOf="@id/loacation"
                app:layout_constraintBottom_toBottomOf="@id/txTv_visited"
                android:drawableStart="@drawable/ic_small_like"
                android:drawablePadding="4dp"/>
            <TextView
                android:id="@+id/txtv_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorGray10"
                android:text="@string/_20"
                app:layout_constraintStart_toEndOf="@id/txtv_80"
                app:layout_constraintTop_toTopOf="@id/txtv_80"
                android:drawableStart="@drawable/ic_small_dislike"
                android:drawablePadding="4dp"
                android:layout_marginStart="10dp"/>
            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorgray11"
                app:layout_constraintTop_toBottomOf="@id/txTv_visited"
                android:layout_marginTop="9dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/txtv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textColor="@color/colorMaroon"
                app:layout_constraintTop_toBottomOf="@id/view"
                android:layout_marginTop="12dp"
                android:drawableTop="@drawable/ic_website"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/view"
                android:layout_marginStart="56dp"/>
            <TextView
                android:id="@+id/txtv_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textColor="@color/colorMaroon"
                android:textSize="14sp"
                android:layout_marginStart="80dp"
                app:layout_constraintBottom_toBottomOf="@id/txtv_website"
                app:layout_constraintStart_toEndOf="@id/txtv_website"
                app:layout_constraintTop_toTopOf="@id/txtv_website"
                android:drawableTop="@drawable/ic_call"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="14sp"
                android:textColor="@color/colorMaroon"
                app:layout_constraintTop_toTopOf="@id/txtv_call"
                android:drawableTop="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="@id/txtv_call"
                app:layout_constraintStart_toEndOf="@id/txtv_call"
                android:layout_marginStart="80dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>