<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05"/>
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95"/>
            <ImageView
                android:id="@+id/iv_backbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_backbuttonmaroon"
                app:layout_constraintEnd_toEndOf="@id/guidelineStart"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/txtv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                android:textColor="@color/colorMaroon"
                android:textSize="17sp"
                style="@style/StyleSemiBold"
                app:layout_constraintTop_toTopOf="@id/iv_backbtn"/>
            <TextView
                android:id="@+id/txtv_setupAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setup_account"
                android:textSize="35sp"
                android:textColor="@color/colorGray5"
                android:ems="5"
                style="@style/StyleRegular"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/iv_backbtn"
                android:layout_marginTop="18dp"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_CircleImg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                app:layout_constraintWidth_percent="0.24"
                app:layout_constraintHeight_percent="0.10"
                android:src="@drawable/ic_profile"
                app:layout_constraintTop_toBottomOf="@id/txtv_setupAccount"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>
            <ImageView
                android:id="@+id/iv_addImageIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_image_icon"
                app:layout_constraintTop_toTopOf="@id/iv_CircleImg"
                app:layout_constraintBottom_toBottomOf="@id/iv_CircleImg"
                app:layout_constraintStart_toStartOf="@id/iv_CircleImg"
                app:layout_constraintEnd_toEndOf="@id/iv_CircleImg"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintVertical_bias="1"/>
            <TextView
                android:id="@+id/txtv_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/colorGray5"
                app:layout_constraintTop_toBottomOf="@id/iv_CircleImg"
                android:layout_marginTop="42dp"
                android:textSize="16sp"
                android:fontFamily="@font/futuramediumbt"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                android:layout_marginStart="10dp"/>
            <EditText
                android:id="@+id/editTxt_Alex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/alex"
                android:inputType="textPersonName"
                android:layout_marginTop="14dp"
                android:textColorHint="@color/colorGray5"
                android:layout_marginStart="6dp"
                app:layout_constraintEnd_toStartOf="@id/txtv_next"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/txtv_firstname" />
            <TextView
                android:id="@+id/txtv_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/editTxt_Alex"
                android:text="@string/last_name"
                android:textSize="16sp"
                android:textColor="@color/colorGray5"
                android:fontFamily="@font/futuramediumbt"
                app:layout_constraintStart_toStartOf="@id/txtv_firstname"
                android:layout_marginTop="14dp"/>
            <EditText
                android:id="@+id/editTxt_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="14dp"
                android:textColorHint="@color/colorGray5"
                app:layout_constraintEnd_toEndOf="@id/editTxt_Alex"
                app:layout_constraintStart_toStartOf="@id/editTxt_Alex"
                app:layout_constraintTop_toBottomOf="@id/txtv_lastname" />
            <TextView
                android:id="@+id/txtv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                app:layout_constraintTop_toBottomOf="@id/editTxt_lastname"
                app:layout_constraintStart_toStartOf="@id/txtv_lastname"
                android:layout_marginTop="14dp"
                android:textColor="@color/colorGray5"
                android:textSize="16sp"
                android:fontFamily="@font/futuramediumbt"/>
            <EditText
                android:id="@+id/editTxt_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="14dp"
                android:textColorHint="@color/colorGray5"
                app:layout_constraintEnd_toEndOf="@id/editTxt_lastname"
                app:layout_constraintStart_toStartOf="@id/editTxt_lastname"
                app:layout_constraintTop_toBottomOf="@id/txtv_username" />
            <TextView
                android:id="@+id/txtv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintTop_toBottomOf="@id/editTxt_username"
                app:layout_constraintStart_toStartOf="@id/txtv_username"
                android:layout_marginTop="14dp"
                android:textColor="@color/colorGray5"
                android:textSize="16sp"
                android:fontFamily="@font/futuramediumbt"/>
            <EditText
                android:id="@+id/editTxt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="14dp"
                android:textColorHint="@color/colorGray5"
                app:layout_constraintEnd_toEndOf="@id/editTxt_username"
                app:layout_constraintStart_toStartOf="@id/editTxt_username"
                app:layout_constraintTop_toBottomOf="@id/txtv_email" />
            <TextView
                android:id="@+id/txtv_paswrd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintTop_toBottomOf="@id/editTxt_email"
                app:layout_constraintStart_toStartOf="@id/txtv_email"
                android:layout_marginTop="14dp"
                android:textColor="@color/colorGray5"
                android:textSize="16sp"
                android:fontFamily="@font/futuramediumbt"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>